{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 23,
  "lineage": "24f47804-51da-6615-780c-905cf4409d7e",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:961676526279:vpc/vpc-02a6622e06edfbd2d",
            "cidr_block": "10.254.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-05b567622b456cab3",
                "cidr_block": "10.254.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-026316f3f9bb0a3e5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02a6622e06edfbd2d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-057aecaee8ac2c8f5",
            "owner_id": "961676526279",
            "tags": {
              "Name": "mgmt-vpc-new-VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-034cc4f11e641a881",
            "arn": "arn:aws:ec2:ap-northeast-2:961676526279:elastic-ip/eipalloc-034cc4f11e641a881",
            "domain": "vpc",
            "id": "eipalloc-034cc4f11e641a881",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-43-200-154-140.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.200.154.140",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02196008b76e66ca6",
            "arn": "arn:aws:ec2:ap-northeast-2:961676526279:instance/i-0e656aeaf1dde6bad",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "callbot-profile",
            "id": "i-0e656aeaf1dde6bad",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "callbot-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-071dd3b51f7673a42",
            "private_dns": "ip-10-254-11-9.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.254.11.9",
            "public_dns": "ec2-43-201-55-187.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.201.55.187",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-025cbd8c83b4dfcca",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a2a393f4ff44dc06",
            "tags": {
              "Name": "callbot-app"
            },
            "tags_all": {
              "Name": "callbot-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06235daa8c5ad5376"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.app",
            "aws_iam_role.app",
            "aws_key_pair.app",
            "aws_security_group.alb",
            "aws_security_group.ec2",
            "data.aws_ami.amazon_linux_2023",
            "data.aws_ec2_managed_prefix_list.cloudfront",
            "data.aws_subnets.public",
            "data.aws_vpc.main",
            "tls_private_key.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:961676526279:loadbalancer/app/callbot-alb/1b137371fbc470fd",
            "arn_suffix": "app/callbot-alb/1b137371fbc470fd",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "callbot-alb-519600343.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:961676526279:loadbalancer/app/callbot-alb/1b137371fbc470fd",
            "idle_timeout": 120,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "callbot-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0ec106cb9db66bba7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09aa40f9d42b2db72"
              },
              {
                "subnet_id": "subnet-0a2a393f4ff44dc06"
              }
            ],
            "subnets": [
              "subnet-09aa40f9d42b2db72",
              "subnet-0a2a393f4ff44dc06"
            ],
            "vpc_id": "vpc-02a6622e06edfbd2d",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_security_group.alb",
            "data.aws_ec2_managed_prefix_list.cloudfront",
            "data.aws_subnets.public",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:961676526279:listener/app/callbot-alb/1b137371fbc470fd/26c388fb635f0ac3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:961676526279:targetgroup/callbot-tg/9fc0eef989b95541",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:961676526279:listener/app/callbot-alb/1b137371fbc470fd/26c388fb635f0ac3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:961676526279:loadbalancer/app/callbot-alb/1b137371fbc470fd",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.main",
            "aws_security_group.alb",
            "data.aws_ec2_managed_prefix_list.cloudfront",
            "data.aws_subnets.public",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:961676526279:targetgroup/callbot-tg/9fc0eef989b95541",
            "arn_suffix": "targetgroup/callbot-tg/9fc0eef989b95541",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:961676526279:targetgroup/callbot-tg/9fc0eef989b95541",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-2:961676526279:loadbalancer/app/callbot-alb/1b137371fbc470fd"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "callbot-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02a6622e06edfbd2d"
          },
          "dependencies": [
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:961676526279:targetgroup/callbot-tg/9fc0eef989b95541-20260322111254342000000003",
            "port": 8000,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:961676526279:targetgroup/callbot-tg/9fc0eef989b95541",
            "target_id": "i-0e656aeaf1dde6bad"
          },
          "dependencies": [
            "aws_iam_instance_profile.app",
            "aws_iam_role.app",
            "aws_instance.app",
            "aws_key_pair.app",
            "aws_lb_target_group.main",
            "aws_security_group.alb",
            "aws_security_group.ec2",
            "data.aws_ami.amazon_linux_2023",
            "data.aws_ec2_managed_prefix_list.cloudfront",
            "data.aws_subnets.public",
            "data.aws_vpc.main",
            "tls_private_key.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:961676526279:security-group/sg-0ec106cb9db66bba7",
            "description": "Allow CloudFront traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ec106cb9db66bba7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [
                  "pl-22a6434b"
                ],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "callbot-alb-sg",
            "name_prefix": "",
            "owner_id": "961676526279",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02a6622e06edfbd2d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ec2_managed_prefix_list.cloudfront",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:961676526279:security-group/sg-06235daa8c5ad5376",
            "description": "Security group for EC2 app",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06235daa8c5ad5376",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ec106cb9db66bba7"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "callbot-ec2-sg",
            "name_prefix": "",
            "owner_id": "961676526279",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02a6622e06edfbd2d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "data.aws_ec2_managed_prefix_list.cloudfront",
            "data.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}